objects/Compliance_Record__c.object
<CustomObject>
    <label>Compliance Record</label>
    <pluralLabel>Compliance Records</pluralLabel>
    <nameField>
        <displayFormat>CR-{0000}</displayFormat>
        <label>Compliance Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Compliance_Standard__c</fullName>
        <label>Compliance Standard</label>
        <type>Picklist</type>
        <picklist>
            <picklistValues>
                <fullName>Standard1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard2</fullName>
            </picklistValues>
        </picklist>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <picklist>
            <picklistValues>
                <fullName>Compliant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Compliant</fullName>
            </picklistValues>
        </picklist>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <label>Assigned To</label>
        <type>Lookup</type>
        <referenceTo>User</referenceTo>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>LongTextArea</type>
        <length>32000</length>
    </fields>
    <fields>
        <fullName>Document_Attachment__c</fullName>
        <label>Document Attachment</label>
        <type>File</type>
    </fields>
</CustomObject>